# memglass

./: .clang-tidy  CMakeLists.txt  README.md  spec-proposal.md
clients/python/: README.md  memglass.py
docs/: advanced.md  api-reference.md  architecture.md  memglass-diff.md  quickstart.md
examples/: CMakeLists.txt  trading_observer.cpp  trading_producer.cpp  trading_types.hpp
include/memglass/: allocator.hpp  memglass.hpp  observer.hpp  registry.hpp  types.hpp
include/memglass/detail/: seqlock.hpp  shm.hpp
src/: allocator.cpp  memglass.cpp  observer.cpp  registry.cpp
src/platform/: shm_posix.cpp
tests/: CMakeLists.txt  test_allocator.cpp  test_integration.cpp  test_registry.cpp  test_seqlock.cpp  test_shm.cpp
tools/: memglass-diff.cpp  memglass.cpp
tools/memglass-gen/: CMakeLists.txt  generator.cpp  generator.hpp  main.cpp
